[package]
name = "opentelemetry-stackdriver"
version = "0.6.0"
description = "A Rust opentelemetry exporter that uploads traces to Google Stackdriver trace."
documentation = "https://vivint-smarthome.github.io/opentelemetry-stackdriver/opentelemetry_stackdriver/"
repository = "https://github.com/vivint-smarthome/opentelemetry-stackdriver"
license = "MIT/Apache-2.0"
authors = ["jacobkiesel <jacob.kiesel@vivint.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.3.0"

[dev-dependencies]
futures = { version = "0.3", features = ["thread-pool"] }
simple_logger = "1.6"
tokio = { version = "0.2", features = ["rt-core", "rt-threaded"] }
tracing = "0.1.17"
tracing-futures = "0.2.4"
tracing-opentelemetry = "0.5.0"
tracing-subscriber = "0.2.9"

[dependencies]
derivative = "2.1.1"
futures = "0.3"
hex = "0.4"
http = "0.2"
hyper = "0.13"
log = "0.4"
num_cpus = "1.12"
opentelemetry = "0.6"
prost = "0.6"
prost-types = "0.6"
rustls = "0.18.0"
tonic = { version = "0.3.0", features = ["transport", "tls"] }
tokio = { version = "0.2", optional = true }
yup-oauth2 = "4.1"
webpki-roots = "0.20.0"

[features]
default = []
tokio_adapter = ["tokio"]
